app/styles/main.scss
/* ... */
/*
 *
 * Front-page: Promises
 *
 */
#promises {
  padding-top: 30px;

  p {
    font-size: 1.5em;
    font-weight: normal;
  }

  ul.icons-list {
    width: 230px;
    min-width: 230px;
    height: 230px;
    margin: 0 auto;

    li {
      padding: 0;
      margin: 0;

      a {
        width: 72px;
        height: 72px;
      }
    }

    #cost         { @include btn-icon(0,      -72px, 0,      -144px) }
    #analyze      { @include btn-icon(-72px,  -72px, -72px,  -144px) }
    #time         { @include btn-icon(-144px, -72px, -144px, -144px) }
    #customizable { @include btn-icon(-216px, -72px, -216px, -144px) }
    #integration  { @include btn-icon(-288px, -72px, -288px, -144px) }
    #cloud        { @include btn-icon(-360px, -72px, -360px, -144px) }
    #ideas        { @include btn-icon(-432px, -72px, -432px, -144px) }
    #performance  { @include btn-icon(-504px, -72px, -504px, -144px) }
    #privacy      { @include btn-icon(-576px, -72px, -576px, -144px) }
  }
}



/*
 *
 * Front-page: References
 *
 */
#references {
  ul.bxslider {
    li {
      margin-bottom: 15px;

      .col-md-3 {
        text-align: center;
      }
    }
  }

  blockquote {
    border: none;
    margin-top: 20px;

    p {
      font-size: 1.87em;
      font-style: italic;
      text-align: center;
    }

    footer {
      color: $pink;
      border: none;
      font-size: 1.5em;
      float: right;

      h3 {
        margin-top: 0;
      }
    }
  }
}


/*
 *
 * Front-page: Quotes
 *
 */
#quotes {
  @include middle-row;
}


#sub-devmods {
  .img-holder {
    img {
      margin-bottom: -30px;
    }
  }
}


#sub-fast-start {
}


.dev-mod-select {
  display: none;
}


.verify {
  display: block;
  position:relative;
  width:320px;
  height:500px;
  margin:20px auto;

  a.sprite {
    width:159px;
    height:179px;
    background:url(../images/verify-sprite4.png) no-repeat;
    text-indent:-9999px;
    display:inline-block;
  }

  a.verify-icon {
    background-position:0 -92px;
    position:absolute;
    top:90px;
    left:0;
  }

  a.broadcast-icon {
    background-position:-165px 0px;
    position:absolute;
    top:0;
    left:160px;
  }

  a.tracking-icon {
    background-position:0 -274px;
    position:absolute;
    top:269px;
    left:0;
  }

  a.click-icon {
    background-position:-164px -182px;
    position:absolute;
    top:178px;
    left:159px;
  }

  a.verify-icon.active,
  a.verify-icon:hover {
    background-position:0 -541px;
  }

  a.broadcast-icon.active,
  a.broadcast-icon:hover {
    background-position:-165px -451px;
  }

  a.tracking-icon:hover {
    background-position:0 -724px;
  }

  a.click-icon.active,
  a.click-icon:hover {
    background-position:-164px -631px;
  }

  .fixed-left {
    position:fixed;
    z-index:2;
  }
}


.btn-cancel {
  color: $blue;
  text-decoration: underline;
  display: inline-block;
  margin-left: 5px;
  padding-top: 5px;
}


.input-emphasize {
  display: block;
  overflow: hidden;
  border: 1px solid #dddddd;
  padding: 10px;
  background-color: $white;
}


#sub-solutions {
  #row3 {
    iframe {
      max-width: 500px;
      width: 100%;
    }
  }
  #row4 {
    img {
      // margin-top: -30px;
    }
  }
}


#sub-benefits {
  #row1, #row2, #row3 {
    img {
      margin-top: 30px;
    }
  }

  #row5 {
    .well {
      background-color: $pink;
      padding: 10px;
      color: $white;
      font-weight: normal;

      @include border-radius(5px);
    }

    strong {
      font-size: 1.15em;
    }
  }
}


#sub-dialogs {
  #row1 {
    img {
      margin-top: 30px;
    }
  }

  #row4 {
    img {
      margin: 15px 0 20px 0;
    }
  }
}


#sub-prices {
  #row1 {
    .indicators {
      margin-top: 30px;
      margin-bottom: -25px;

      .piles {
        margin-top: 20px;
        min-height: 23px;
        background: url(../images/red-bullet.png) repeat-x;
      }
    }
  }

  #row2 {
    padding-top: 45px;

    .table, tr, td {
      border: none;
    }

    .table {
      font-size: 1.3em;

      td {
        vertical-align: middle;
      }

      .price-thumb {
        width: 70px;
      }
    }
  }

  #row3 {
    .list-inline {
      margin-top: 40px;
    }
  }
}


#sub-contact {
  #map {
    width: 100%;
    height: 320px;
  }
}


/*
 *
 * Front-page: Footer
 *
 */
footer {
  border-top: 3px solid $pink;

  @include middle-row;

  @include navbar-brand(right);

  #footer-nav {
    padding: 17px 15px 0 15px;

    li {
      padding: 0;
      margin-right: 5px;

      a {
        color: $gray;
        font-size: 1.15em;
      }
    }
  }
}
/* ... */

